2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Add write_file tool and refactor file editing functionality in
	gptel configuration.

	* site-lisp/gptel-config.el: Add require for flymake.
	(+gptel-write-file-async): New async tool function for writing
	files with user preview.
	(+gptel-ediff-buffers): New helper function for ediff sessions
	with proper cleanup.
	(+gptel-ediff-file-with-buffer): New helper function for file
	editing with user confirmation.
	(write_file): New gptel tool for writing files with preview and
	confirmation.
	(+gptel-edit-file-async): Refactor to use new ediff helper
	functions for better code organization.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Replace README.org with comprehensive README.md documentation.

	* README.md: New comprehensive documentation file with detailed
	configuration overview, installation instructions, feature
	descriptions, keybindings, and usage guide.
	* README.org: Remove outdated minimal documentation file.

2025-09-08  Zhengyi Fu  <i@fuzy.me>

	Improve error handling and tool functionality in gptel configuration.

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Add proper error
	signal propagation after callback to ensure proper error handling.
	(grep): Fix error handling to return structured error information
	with internal error details. Use project-prefixed buffer names for
	better organization.
	(run_command): Use project-prefixed buffer names for command output
	buffers to avoid conflicts.
	(+gptel--flymake-diag-to-json): New function to convert flymake
	diagnostics to structured JSON format.
	(editor_diagnostics): Update to return structured JSON data instead
	of formatted strings.
	(forge--post-submit-errorback): Fix advice to handle unused arguments
	properly.
	(gptel-agent): Add global variables for backend and model
	configuration to allow customization.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Refactor.

2025-09-07  Zhengyi Fu  <i@fuzy.me>
