@@ -1,5 +1,13 @@
 2025-09-10  Zhengyi Fu  <i@fuzy.me>
 
+	Fix command buffer naming in gptel configuration.
+
+	* site-lisp/gptel-config.el (+gptel-edit-file-async): Fix
+	command buffer name generation to handle cases where
+	project-current returns nil.
+
+2025-09-10  Zhengyi Fu  <i@fuzy.me>
+
 	Add write_file tool and refactor file editing functionality in
 	gptel configuration.
 
